--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^1.0.2
   cloud_firestore: ^3.1.5
   dartz: ^0.10.1
+  google_maps_flutter: ^2.1.1
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   flutter_test:
