--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   dartz: ^0.10.1
   google_maps_flutter: ^2.1.1
   json_annotation: ^4.4.0
+  google_maps_webservice: ^0.0.19
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  assets:
+    - .env
 
   fonts:
     - family: Nunito
