--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
   dartz: ^0.10.1
   google_maps_flutter: ^2.1.1
   json_annotation: ^4.4.0
-  google_maps_webservice: ^0.0.19
   flutter_dotenv: ^5.0.2
+  google_maps_webservice: ^0.0.20-nullsafety.4
 
 dev_dependencies:
   flutter_test:
