--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_annotation: ^4.4.0
   flutter_dotenv: ^5.0.2
   google_maps_webservice: ^0.0.20-nullsafety.4
+  image_picker: ^0.7.0-nullsafety
 
 dev_dependencies:
   json_serializable: ^6.1.4
