--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   google_maps_webservice: ^0.0.20-nullsafety.4
   image_picker: ^0.7.0-nullsafety
+  firebase_storage: ^10.2.5
 
 dev_dependencies:
   json_serializable: ^6.1.4
